--- a/index.html
+++ b/index.html
@@ -14,22 +14,23 @@
         <div class="upperbox">  
             <div class="buttoncontainer">
                 <div class="colors">
-                    <button id="blackBtn">Black</button>
-                    <button id="randomBtn">Random</button>
-                    <button id="rainbowBtn">Rainbow</button>
-                    <button id="eraseBtn">Erase</button>
+                    <button id="blackBtn" onclick="setColor('black')">Black</button>
+                    <button id="random1Btn" onclick="setColor('random1')">Random 1</button>
+                    <button id="random2Btn" onclick="setColor('random2')">Random 2</button>
+                    <button id="eraseBtn" onclick="setColor('erase')">Erase</button>
                 </div>
                 <div class="clearer">
-                    <button id="clearBtn">Clear</button>
+                    <button id="clearBtn" onclick="clearIt()">Clear</button>
                 </div>
             </div>
             <div id="gridcontainer"></div>
         </div> 
         <div class="lowerbox">
-            <div class="slidercontainer">
-                <input type="range" min="1" max="64" value="0" id="slider" 
-                oninput="amount.value=slider.value"> 
-                <output type="amount" id="amount" for="slider">0</output>
+            <div class="sizescontainer">
+                <button class="value16Btn" onclick="changeCurrentSize(16)">16 x 16</button>
+                <button class="value24Btn" onclick="changeCurrentSize(34)">34 x 34</button>
+                <button class="value42Btn" onclick="changeCurrentSize(42)">42 x 42</button>
+                <button class="value64Btn" onclick="changeCurrentSize(64)">64 x 64</button>
             </div>
         </div>
     </div>
